feat: rewrite delete
